# OctoPrint-E3S1P_ByTT_thumbnails

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  Taskfile.yml  babel.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
extras/: e3s1p_bytt_thumbnails.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_e3s1p_bytt_thumbnails/: __init__.py  plugin.py  plugin_config.py
octoprint_e3s1p_bytt_thumbnails/events/: __init__.py  bus.py  types.py
octoprint_e3s1p_bytt_thumbnails/handlers/: __init__.py  base.py  file_metadata_event_handler.py  file_selection_event_handler.py  folder_event_handler.py  print_lifecycle_event_handler.py  settings_update_handler.py  upload_event_handler.py  upload_processing_event_handler.py
octoprint_e3s1p_bytt_thumbnails/services/: __init__.py  helper_file_service.py  printer_sync_service.py  thumbnail_service.py  upload_artifact_service.py  upload_intent_service.py  upload_processing_service.py  workflow_service.py
octoprint_e3s1p_bytt_thumbnails/static/js/: e3s1p_bytt_thumbnails.js
octoprint_e3s1p_bytt_thumbnails/templates/: e3s1p_bytt_thumbnals_settings.jinja2
octoprint_e3s1proforkbyttthumbnails/: __init__.py
octoprint_e3s1proforkbyttthumbnails/templates/: e3s1proforkbyttthumbnails.jinja2  e3s1proforkbyttthumbnails_settings.jinja2
tests/services/: test_upload_artifact_service.py  test_upload_intent_service.py  test_workflow_service.py
translations/: README.txt
(+2 files in other folders)
